--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,9 @@
     <include
         layout="@layout/bottom_navigation" />
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
         <TextView
             android:layout_width="match_parent"
@@ -23,12 +22,38 @@
             android:background="@color/colorPrimary"
             android:textAlignment="center" />
 
-        <android.support.v7.widget.RecyclerView
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:id="@+id/not_applied_text"
+            android:layout_height="100sp"
+            android:textSize="30sp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:layout_centerVertical="true"
+            android:text="You haven\'t applied for any internships yet!"
+            />
+
+        <Button
+            android:layout_width="120sp"
+            android:layout_height="wrap_content"
+            android:text="Apply now"
+            android:layout_below="@id/not_applied_text"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/white"
+            android:backgroundTint="#2e87c0"
+            android:background="@drawable/roundedbutton"
+            />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_offers"
+            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
         </android.support.v7.widget.RecyclerView>
 
-    </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
 
