--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,21 +4,21 @@
 
     <item
         android:id="@+id/nav_button_list"
-        android:title="offers"
+        android:title="Internships"
         android:icon="@drawable/ic_list"
         android:enabled="true"
         />
 
     <item
         android:id="@+id/nav_button_home"
-        android:title="home"
+        android:title="Offers"
         android:icon="@drawable/ic_home"
         android:enabled="true"
         />
 
     <item
         android:id="@+id/nav_button_profile"
-        android:title="profile"
+        android:title="Profile"
         android:icon="@drawable/ic_profile"
         android:enabled="true"
         />
