--- a/app/src/main/res/layout/activity_offer_list.xml
+++ b/app/src/main/res/layout/activity_offer_list.xml
@@ -20,8 +20,9 @@
         />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_offer_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@id/tv_internships">
     </android.support.v7.widget.RecyclerView>
 
