--- a/app/src/main/res/layout/rv_offer_item.xml
+++ b/app/src/main/res/layout/rv_offer_item.xml
@@ -12,9 +12,9 @@
         >
 
         <TextView
+            android:id="@+id/job_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/job_name"
             android:text="Software engineer"
             android:textColor="@color/black"
             android:layout_alignParentTop="true"
@@ -23,13 +23,13 @@
             />
 
         <TextView
+            android:id="@+id/company_name"
             android:layout_width="wrap_content"
             android:text="Melon AD"
             android:textSize="20sp"
             android:textColor="@color/black"
-            android:id="@+id/company_name"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/job_name"
+            android:layout_below="@+id/job_title"
             android:paddingStart="40sp"
             />
 
