--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -8,6 +8,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemBackground="@color/colorPrimary"
+        app:itemIconTint="@color/themeBlue"
+        app:itemTextColor="@color/themeBlue"
 
         app:menu="@menu/bottom_nav_menu" />
 </merge>
