--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -34,8 +34,10 @@
                 android:layout_marginEnd="10dp"
                 android:src="@drawable/save_icon"
                 android:scaleType="fitCenter"
-                android:background=""
-                android:layout_alignParentEnd="true"/>
+
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentRight="true" />
 
         </RelativeLayout>
 
@@ -62,16 +64,18 @@
                     android:layout_width="100dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
-                    android:gravity="center"
+                    android:gravity="start|center_vertical"
                     android:text="@string/first_name_text"
                     android:textAlignment="textStart"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" />
 
                 <EditText
                     android:layout_width="222dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -83,16 +87,18 @@
                     android:layout_width="100dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
-                    android:gravity="center"
+                    android:gravity="start|center_vertical"
                     android:textAlignment="textStart"
                     android:text="@string/last_name_text"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" />
 
                 <EditText
                     android:layout_width="222dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -104,16 +110,18 @@
                     android:layout_width="100dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
-                    android:gravity="center"
+                    android:gravity="start"
                     android:text="Description"
                     android:textAlignment="textStart"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" />
 
                 <EditText
                     android:layout_width="222dp"
                     android:layout_height="70dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -138,16 +146,18 @@
                     android:layout_width="100dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
-                    android:gravity="center"
+                    android:gravity="start|center_vertical"
                     android:textAlignment="textStart"
                     android:text="@string/email_text"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" />
 
                 <EditText
                     android:layout_width="222dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -159,16 +169,18 @@
                     android:layout_width="100dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
-                    android:gravity="center"
+                    android:gravity="start|center_vertical"
                     android:textAlignment="textStart"
                     android:text="Phone"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="8dp" />
 
                 <EditText
                     android:layout_width="222dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginRight="8dp" />
 
             </android.support.constraint.ConstraintLayout>
 
