--- a/app/src/main/res/layout/activity_offer_list.xml
+++ b/app/src/main/res/layout/activity_offer_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.debeliya_i_kompaniya.internshipper.ui.OfferListActivity">
 
     <include
@@ -30,12 +30,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="70dp"
         android:layout_marginRight="40dp"
+        android:layout_marginEnd="40dp"
         android:elevation="6dp"
         android:backgroundTint="@color/themeBlue"
         android:src="@drawable/plus_icon"
         />
 
-</  RelativeLayout>
+</RelativeLayout>
