Adding fix for the bottom navigation + onclick listener for the recyclerview items

--- a/app/src/main/res/layout/activity_all_offers.xml
+++ b/app/src/main/res/layout/activity_all_offers.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.debeliya_i_kompaniya.internshipper.ui.MainActivity">
+    tools:context="com.debeliya_i_kompaniya.internshipper.ui.AllOffers">
 
 
     <include
@@ -36,16 +36,15 @@
         <Button
             android:layout_width="120sp"
             android:layout_height="wrap_content"
-            android:text="Apply now"
-            android:layout_below="@id/not_applied_text"
+            android:layout_below="@+id/not_applied_text"
             android:layout_centerHorizontal="true"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/themeBlue"
             android:background="@drawable/roundedbutton"
-            />
+            android:backgroundTint="@color/themeBlue"
+            android:text="Apply now"
+            android:textColor="@color/white" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_offers"
+            android:id="@+id/rv_all_offers"
             android:layout_marginTop="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
