--- a/app/src/main/res/layout/activity_my_offer_list.xml
+++ b/app/src/main/res/layout/activity_my_offer_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="com.debeliya_i_kompaniya.internshipper.ui.OfferListActivity">
+    tools:context="com.debeliya_i_kompaniya.internshipper.ui.MyOfferListActivity">
 
     <include
         layout="@layout/bottom_navigation" />
@@ -20,7 +20,7 @@
         />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_offer_list"
+        android:id="@+id/rv_my_offers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_internships">
