--- a/app/src/main/res/layout/activity_my_offer_list.xml
+++ b/app/src/main/res/layout/activity_my_offer_list.xml
@@ -3,40 +3,55 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.debeliya_i_kompaniya.internshipper.ui.AllOffers">
+
 
     <include
         layout="@layout/bottom_navigation" />
-    
-    <TextView
-        android:id="@+id/tv_internships"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorPrimary"
-        android:text="Internships"
-        android:textSize="25sp"
-        android:textAlignment="center"
-        />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_my_offers"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/tv_internships">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="70dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginEnd="40dp"
-        android:elevation="6dp"
-        android:backgroundTint="@color/themeBlue"
-        android:src="@drawable/plus_icon"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="Offers"
+            android:textSize="25dp"
+            android:background="@color/colorPrimary"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/not_applied_text"
+            android:layout_height="80sp"
+            android:textSize="25sp"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:layout_centerVertical="true"
+            android:text="You haven\'t applied for any internships yet!"
+            />
+
+        <Button
+            android:layout_width="120sp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/not_applied_text"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/roundedbutton"
+            android:backgroundTint="@color/themeBlue"
+            android:text="Apply now"
+            android:textColor="@color/white" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_all_offers"
+            android:layout_marginTop="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
 
 </RelativeLayout>
+
