Adding fix for bottom navigation + moving some of the images

--- a/app/src/main/res/layout/activity_my_offer_list.xml
+++ b/app/src/main/res/layout/activity_my_offer_list.xml
@@ -44,7 +44,7 @@
             android:textColor="@color/white" />
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_all_offers"
+            android:id="@+id/rv_my_offers"
             android:layout_marginTop="40dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
