--- a/app/src/main/res/layout/activity_all_offer_list.xml
+++ b/app/src/main/res/layout/activity_all_offer_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
         layout="@layout/bottom_navigation" />
@@ -19,9 +18,9 @@
         />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_my_offers"
+        android:id="@+id/rv_all_offers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/tv_internships">
     </android.support.v7.widget.RecyclerView>
 
@@ -32,11 +31,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="70dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
         android:elevation="6dp"
-        android:backgroundTint="@color/themeBlue"
-        android:src="@drawable/plus_icon"
+        app:backgroundTint="@color/themeBlue"
+        android:src="@drawable/ic_action_plus"
         />
 
 </RelativeLayout>
