--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -19,8 +19,8 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_pic_settings"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/user_icon"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp"
@@ -28,13 +28,13 @@
                 app:civ_border_color="#000000"/>
 
             <ImageButton
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
-                android:src="@drawable/save_icon"
+                android:src="@drawable/ic_save_icon"
+                android:background="@null"
                 android:scaleType="fitCenter"
-
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true" />
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
                     android:gravity="start|center_vertical"
@@ -71,7 +71,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
-                    android:layout_width="222dp"
+                    android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
                     android:gravity="start|center_vertical"
@@ -94,7 +94,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
-                    android:layout_width="222dp"
+                    android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
                     android:gravity="start"
@@ -117,7 +117,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
-                    android:layout_width="222dp"
+                    android:layout_width="180dp"
                     android:layout_height="70dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +143,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
                     android:gravity="start|center_vertical"
@@ -153,7 +153,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
-                    android:layout_width="222dp"
+                    android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +166,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
                     android:gravity="start|center_vertical"
@@ -176,7 +176,7 @@
                     android:layout_marginLeft="8dp" />
 
                 <EditText
-                    android:layout_width="222dp"
+                    android:layout_width="180dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
