--- a/app/src/main/res/layout/activity_all_offer_list.xml
+++ b/app/src/main/res/layout/activity_all_offer_list.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include
-        layout="@layout/bottom_navigation" />
+    <include layout="@layout/bottom_navigation" />
     
     <TextView
         android:id="@+id/tv_internships"
@@ -19,7 +18,7 @@
         />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_my_offers"
+        android:id="@+id/rv_all_offers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tv_internships">
