--- a/app/src/main/res/layout/rv_item_offer.xml
+++ b/app/src/main/res/layout/rv_item_offer.xml
@@ -14,8 +14,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            >
+            android:padding="16dp">
 
             <TextView
                 android:layout_width="wrap_content"
