Adding activity for offer adding + adding some layout ids

--- a/app/src/main/res/layout/activity_add_offer.xml
+++ b/app/src/main/res/layout/activity_add_offer.xml
@@ -93,18 +93,21 @@
             android:orientation="horizontal">
 
             <RadioButton
+                android:id="@+id/rb_software"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Software"
                 />
 
             <RadioButton
+                android:id="@+id/rb_hardware"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hardware"
                 />
 
             <RadioButton
+                android:id="@+id/rb_embedded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Embedded"
@@ -115,6 +118,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btn_add_offer"
         android:layout_width="100sp"
         android:layout_height="wrap_content"
         android:text="Add"
