--- a/app/src/main/res/layout/activity_all_offer_list.xml
+++ b/app/src/main/res/layout/activity_all_offer_list.xml
@@ -24,6 +24,7 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_add_offer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
