Adding transfering options between screens

--- a/app/src/main/res/layout/activity_my_offer_list.xml
+++ b/app/src/main/res/layout/activity_my_offer_list.xml
@@ -33,6 +33,7 @@
             />
 
         <Button
+            android:id="@+id/btn_apply_now"
             android:layout_width="120sp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/not_applied_text"
