--- a/app/src/main/res/layout/activity_add_offer.xml
+++ b/app/src/main/res/layout/activity_add_offer.xml
@@ -13,6 +13,7 @@
         android:id="@+id/rl_nav_menu">
         
         <ImageButton
+            android:id="@+id/ib_back_button"
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_centerVertical="true"
