Added empty field check for adding internships

--- a/app/src/main/res/layout/activity_add_offer.xml
+++ b/app/src/main/res/layout/activity_add_offer.xml
@@ -110,12 +110,14 @@
         android:layout_centerHorizontal="true">
         
         <RadioGroup
+            android:id="@+id/rg_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <RadioButton
                 android:id="@+id/rb_software"
+                android:onClick="rbClick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Software"
@@ -123,6 +125,7 @@
 
             <RadioButton
                 android:id="@+id/rb_hardware"
+                android:onClick="rbClick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Hardware"
@@ -130,6 +133,7 @@
 
             <RadioButton
                 android:id="@+id/rb_embedded"
+                android:onClick="rbClick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Embedded"
