--- a/app/src/main/res/layout/activity_my_offer_list.xml
+++ b/app/src/main/res/layout/activity_my_offer_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.debeliya_i_kompaniya.internshipper.ui.AllOffers">
+    tools:context="com.debeliya_i_kompaniya.internshipper.ui.AllOffersActivity">
 
 
     <include layout="@layout/bottom_navigation" />
